--- a/views/includes/navbarManager.ejs
+++ b/views/includes/navbarManager.ejs
@@ -23,7 +23,7 @@
                     <a class="button is-warning" href="/manager/incidents">
                         <strong>incidents</strong>
                     </a>
-                    <a class="button is-light" href="/manager/personnel">
+                    <a class="button is-light" href="/manager">
                         <strong>accueil</strong>
                     </a>
                     <a class="button is-primary" href="/deconnexion">
