--- a/views/campeur/reservations.ejs
+++ b/views/campeur/reservations.ejs
@@ -5,7 +5,7 @@
 <section class="container margin-top-1 margin-bottom-1">
     <div class="columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
-            <h1 class="title is-1 has-text-left">Vos réservations</h1>
+            <h1 class="title is-1 has-text-left">Réservations</h1>
             <h2 class="subtitle has-text-primary has-text-left">Bonjour <%=prenom%></h2>
         </div>
     </div>
