--- a/views/index/reservation.ejs
+++ b/views/index/reservation.ejs
@@ -50,7 +50,7 @@
         <table>
             <% for(var i=0; i < rows.length; i++) { %>
                 <div class="columns is-centered">
-                    <div class="column is-4-desktop is-6-tablet is-10-mobile is-offset-1-mobile">
+                    <div class="column is-5-desktop is-6-tablet">
                         <div class="box">
                             <% if (rows[i].nom) { %>
                                 <% if(rows[i].prestige == 1){ %>
