--- a/views/manager/personnel.ejs
+++ b/views/manager/personnel.ejs
@@ -29,13 +29,13 @@
     <% if(rows){ %>
         <% for(var i=0; i < rows.length; i++){ %>
             <div class="columns is-centered">
-                <div class="column is-5-desktop is-7-tablet is-10-mobile">
+                <div class="column is-5-desktop is-7-tablet">
                     <div class="box">
                         <div class="columns is-vcentered is-mobile">
-                            <div class="column is-3">
+                            <div class="column is-2">
                                 <i class="fas fa-user fa-2x has-text-<%if(rows[i].estManager == 1){%>warning<%}else{%>primary<%}%>"></i>
                             </div>
-                            <div class="column is-2">
+                            <div class="column is-3">
                                 <p class="title is-5">Id : <span class="has-text-weight-light"><%= rows[i].id %></span></p>
                             </div>
                             <div class="column is-5">
