--- a/views/personnel/arrivees.ejs
+++ b/views/personnel/arrivees.ejs
@@ -30,7 +30,7 @@
         <table>
             <% for(var i=0; i < rows.length; i++) { %>
                 <div class="columns is-centered">
-                    <div class="column is-6-desktop is-9-tablet is-12-mobile">
+                    <div class="column is-6-desktop is-9-tablet">
                         <div class="box">
                             <% if (rows[i].nomChalet) { %>
                                 <% if(rows[i].prestige == 1){ %>
