--- a/views/personnel/campeurs_all.ejs
+++ b/views/personnel/campeurs_all.ejs
@@ -29,7 +29,7 @@
     <% if(rows){ %>
         <% for(var i=0; i < rows.length; i++){ %>
             <div class="columns is-centered">
-                <div class="column is-6-desktop is-9-tablet is-12-mobile">
+                <div class="column is-6-desktop is-9-tablet">
                     <div class="box">
                         <div class="columns is-vcentered is-mobile">
                             <div class="column is-1">
