Fix routes and controllers

--- a/views/personnel/campeur_id.ejs
+++ b/views/personnel/campeur_id.ejs
@@ -17,11 +17,12 @@
         <div class="column is-4-desktop is-6-tablet is-8-mobile is-offset-2-mobile">
             <div class="card">
                 <div class="card-content">
-                    <p class="title is-5">Nom : <span class="has-text-primary has-text-weight-light"><%=rows.nom%></span>
-                    <p class="title is-5">Prenom : <span class="has-text-primary has-text-weight-light"><%=rows.prenom%></span>
+                    <p class="title is-5">Nom : <span class="has-text-primary has-text-weight-light"><%=rows.nom%></span></p>
+                    <p class="title is-5">Prenom : <span class="has-text-primary has-text-weight-light"><%=rows.prenom%></span></p>
                     <hr>
-                    <p class="title is-5">Mail : <span class="has-text-primary has-text-weight-light"><%=rows.mail%></span>
-                    <p class="title is-5">Telephone : <span class="has-text-primary has-text-weight-light"><%=rows.telephone%></span>
+                    <p class="title is-5">Mail : <span class="has-text-primary has-text-weight-light"><%=rows.mail%></span></p>
+                    <p class="title is-5">Telephone : <span class="has-text-primary has-text-weight-light"><%=rows.telephone%></span></p>
+                    <p class="title is-5 has-text-primary has-text-right"><%=reserv.cpt%> réservations</p>
                 </div>
             </div>
         </div>
