--- a/views/campeur/compte.ejs
+++ b/views/campeur/compte.ejs
@@ -28,6 +28,7 @@
     <div class="columns is-centered">
         <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
             <form method="post">
+                <input type="hidden" name="_csrf" value="<%=csrfToken%>">
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
                     <input class="input" type="text" value="<%=camp.nom%>" name="nom" required>  <!-- nom -->
