--- a/views/campeur/signaler.ejs
+++ b/views/campeur/signaler.ejs
@@ -28,6 +28,7 @@
     <div class="columns is-centered">
         <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
             <form method="post">
+                <input type="hidden" name="_csrf" value="<%=csrfToken%>">
                 <div class="field">
                     <div class="select">
                         <select name="type" id="type">
