--- a/views/index/connexion.ejs
+++ b/views/index/connexion.ejs
@@ -12,7 +12,7 @@
 </section>
 
 <section>
-    <% if(flash){ %>
+    <% if(locals.flash){ %>
         <div class="columns is-centered has-text-centered">
             <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
                 <div class="notification is-<%= flash.type %>">
