--- a/views/campeur/reservations.ejs
+++ b/views/campeur/reservations.ejs
@@ -12,7 +12,7 @@
 </section>
 
 <section>
-    <% if(flash){ %>
+    <% if(locals.flash){ %>
         <div class="columns is-centered has-text-centered">
             <div class="column is-6-desktop is-9-tablet is-12-mobile">
                 <div class="notification is-<%= flash.type %>">
