Camper can't report when not in the camping

--- a/views/campeur/reservations.ejs
+++ b/views/campeur/reservations.ejs
@@ -14,7 +14,7 @@
 <section>
     <% if(locals.flash){ %>
         <div class="columns is-centered has-text-centered">
-            <div class="column is-6-desktop is-9-tablet is-12-mobile">
+            <div class="column is-6-desktop">
                 <div class="notification is-<%= flash.type %>">
                     <button class="delete"></button>
                     <%= locals.flash.text %>
