Fix issues saw on SonarCloud

--- a/views/manager/personnel_id.ejs
+++ b/views/manager/personnel_id.ejs
@@ -56,9 +56,9 @@
                 <div class="control has-text-centered margin-button">
                     <button type="submit" class="button is-primary is-small is-rounded is-outlined">Modifier</button>
                     <a class="button is-secondary is-small is-rounded is-outlined" href="/manager/personnel">Retour</a>
-                    <a class="button is-danger is-small is-rounded is-outlined" href="/manager/personnel/<%=pers.id%>/delete">Supprimer</a>
+                    <a class="button is-danger is-small is-rounded is-outlined delete_button" href="/manager/personnel/<%=pers.id%>/delete">Supprimer</a>
                 </div>
-            </form>       
+            </form>   
         </div>
     </div>
 </section>
