--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -16,7 +16,7 @@
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
         <a class="navbar-item" href="/">
-            acceuil
+            accueil
         </a>
 
         <a class="navbar-item" href="/tarifs">
