--- a/views/index/recuperation.ejs
+++ b/views/index/recuperation.ejs
@@ -5,8 +5,8 @@
 <section class="container margin-top-1 margin-bottom-1">
     <div class="columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
-            <h1 class="title is-1 has-text-left">Connexion</h1>
-            <h2 class="subtitle has-text-primary has-text-left">Accedez à votre espace</h2>
+            <h1 class="title is-1 has-text-left">Récupération</h1>
+            <h2 class="subtitle has-text-primary has-text-left">Du mot de passe</h2>
         </div>
     </div>
 </section>
@@ -38,18 +38,9 @@
                     </span>
                     </p>
                 </div>
-                <div class="field margin-form">
-                    <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="password" placeholder="Mot de passe" name="password" required>
-                    <span class="icon is-small is-left">
-                        <i class="fas fa-lock"></i>
-                    </span>
-                    </p>
-                </div>
                 <div class="control has-text-centered margin-button">
-                    <button type="submit" class="button is-primary is-small is-rounded is-outlined">Se connecter</button>
-                    <a class="button is-secondary is-small is-rounded is-outlined" href="/inscription">Je n'ai pas de compte !</a>
-                    <a class="button is-danger is-small is-rounded is-outlined" href="/reinitialisation_mot_de_passe">Mot de passe oublié</a>
+                    <button type="submit" class="button is-primary is-small is-rounded is-outlined">Envoyer</button>
+                    <a class="button is-secondary is-small is-rounded is-outlined" href="/connexion">Retour</a>
                 </div>
             </form>          
         </div>
