Try to send HTML mails

--- a/views/index/a_propos.ejs
+++ b/views/index/a_propos.ejs
@@ -87,7 +87,7 @@
       </div>
       <div class="timeline-content">
         <p class="heading">Juin 2015</p>
-        <p class="has-text-weight-semibold">Partenariat Activitées Du Lubéron</p>
+        <p class="has-text-weight-semibold">Partenariat Activités Du Lubéron</p>
       </div>
     </div>
     <header class="timeline-header">
