Push on heroku v1.0.0 of the app

--- a/views/index/mentions_legales.ejs
+++ b/views/index/mentions_legales.ejs
@@ -17,7 +17,7 @@
           <p class="panel-block is-active">
             <span class="is-family-code">Ce site a été créé dans le cadre d'un projet de développement d'application web.
                 Toutes les informations présentées sur ce site sont fictives et servent juste de contenu pour une présentation.
-                Le but de ce projet est d'offrir à un camping un nouvel outil de gestion fonctionnel et efficace.</span>
+                Le but de ce projet est d'offrir à un camping un nouvel outil de gestion fonctionnel et efficace. Crédit photos : Unsplash</span>
           </p>
         </article>
     </div>
