--- a/views/index/tarifs.ejs
+++ b/views/index/tarifs.ejs
@@ -19,7 +19,7 @@
         <div class="plan-item">-</div>
       </div>
       <div class="plan-footer">
-        <a class="button is-fullwidth" type="submit">Choisir</a>
+        <a class="button is-fullwidth" type="submit">Simple et efficace</a>
       </div>
     </div>
   
@@ -33,7 +33,7 @@
         <div class="plan-item">-</div>
       </div>
       <div class="plan-footer">
-        <a class="button is-fullwidth" type="submit">Choisir</a>
+        <a class="button is-fullwidth" type="submit">Choix famille</a>
       </div>
     </div>
   
@@ -47,7 +47,7 @@
         <div class="plan-item">1 massage offert</div>
       </div>
       <div class="plan-footer">
-        <a class="button is-fullwidth" type="submit">Choisir</a>
+        <a class="button is-fullwidth" type="submit">Confort et intimité</a>
       </div>
     </div>
 
